# riddle

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RiddleLexer.g4  RiddleParser.g4
.github/workflows/: nightly-build.yml  nightly_build_linux.yml  nightly_build_windows.yml
bindgen/: main.cpp
cmake/: optimize.cmake
docs/: Type.md
lsp/: CMakeLists.txt  ParserManager.hpp  handlers.hpp
riddlec/: TypeInfo.cpp  TypeInfo.h  args.cpp  args.h  main.cpp  nodes.cpp  nodes.h
riddlec/config/: llvm_config.h
riddlec/exception/: NameError.h  TypeError.h
riddlec/generate/: BuildInfo.cpp  BuildInfo.h  Generate.cpp  Generate.h  OperatorImpl.cpp  OperatorImpl.h  config.h
riddlec/grammar/: GramVisitor.cpp  GramVisitor.h
riddlec/hir/: ast_hir.cpp  ast_hir.h  ast_lower.cpp  ast_lower.h  context.cpp  context.h  node.cpp  node.h  type.cpp  type.h  visitor.cpp  visitor.h
riddlec/hir/passes/: llvm_pass.cpp  llvm_pass.h  pass.cpp  pass.h  symbol_pass.cpp  symbol_pass.h  type_pass.cpp  type_pass.h
riddlec/nodes/: NodePrinter.cpp  NodePrinter.h  NodeVisitor.cpp  NodeVisitor.h
riddlec/parser/: RiddleLexer.cpp  RiddleLexer.h  RiddleLexer.interp  RiddleLexer.tokens  RiddleParser.cpp  RiddleParser.h  RiddleParser.interp  RiddleParserBaseListener.h  RiddleParserBaseVisitor.cpp  RiddleParserBaseVisitor.h  RiddleParserListener.cpp  RiddleParserListener.h  RiddleParserVisitor.h
riddlec/semantic/: Analyzer.cpp  Analyzer.h  Annoataion.h  Modifier.h  Operators.cpp  Operators.h  SemObject.cpp  SemObject.h  SymbolTable.h
riddlec/support/: DiagnosticEngine.cpp  DiagnosticEngine.h  PassManager.cpp  PassManager.h  RiddleContext.cpp  RiddleContext.h  SourceLocation.cpp  SourceLocation.h  SourceManager.cpp  SourceManager.h  Trie.cpp  Trie.hpp  allocator.cpp  allocator.h  location .h  riddledef.hpp
src/: TypeInfo.cpp  TypeInfo.h  args.cpp  args.h  main.cpp  nodes.cpp  nodes.h
src/exception/: NameError.h  SyntaxError.h
src/generate/: BuildInfo.cpp  BuildInfo.h  Generate.cpp  Generate.h  OperatorImpl.cpp  SerachDirs.cpp  SerachDirs.h  config.h
src/grammar/: GramVisitor.cpp  GramVisitor.h  config.h  parse.h
src/nodes/: NodePrinter.cpp  NodePrinter.h  NodeVisitor.cpp  NodeVisitor.h
src/parser/: RiddleLexer.cpp  RiddleLexer.h  RiddleLexer.interp  RiddleLexer.tokens  RiddleParser.cpp  RiddleParser.h  RiddleParser.interp  RiddleParser.tokens  RiddleParserBaseListener.cpp  RiddleParserBaseListener.h  RiddleParserBaseVisitor.cpp  RiddleParserBaseVisitor.h  RiddleParserListener.cpp  RiddleParserListener.h  RiddleParserVisitor.cpp  RiddleParserVisitor.h
src/semantic/: Analyzer.cpp  Analyzer.h  Operators.cpp  Operators.h  SemObject.cpp  SemObject.h  SymbolTable.h
src/support/: Trie.cpp  Trie.h  riddledef.hpp
test/: main.rid
